// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentSection loaded state it should render the expected empty state message 1`] = `
<DocumentFragment>
  <div
    class="dropdown-container input-container inactive has-text  diagnostic-type-dropdown searchable "
    role="button"
    tabindex="0"
  >
    <label>
      Diagnostic:
    </label>
    <div
      class="dropdown css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class="dropdown__control css-13cymwt-control"
      >
        <div
          class="dropdown__value-container dropdown__value-container--has-value css-1fdsijx-ValueContainer"
        >
          <div
            class="dropdown__single-value css-1dimb5e-singleValue"
          >
            Starter Baseline Diagnostic (Pre)
          </div>
          <div
            class="dropdown__input-container css-qbdosj-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class="dropdown__input"
              id="react-select-3-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="dropdown__indicators css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class="dropdown__indicator-separator css-1u9des2-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class="dropdown__indicator dropdown__dropdown-indicator css-1xc3v61-indicatorContainer"
          >
            <svg
              aria-hidden="true"
              class="css-tj5bde-Svg"
              focusable="false"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p
    class="empty-state-message"
  >
    There is no diagnostic data available for the filters selected. Try modifying or removing a filter to see results.
  </p>
  <table
    class="data-table growth-diagnostic-reports-by-skill-table reporting-format"
  >
    <thead>
      <tr
        class="data-table-headers"
      >
        <th
          class="data-table-header undefined"
          scope="col"
          style="width: 182px; min-width: 182px; text-align: right;"
        >
          <span>
            Student Name
          </span>
        </th>
        <th
          class="data-table-header undefined"
          scope="col"
          style="width: 182px; min-width: 182px; text-align: right;"
        >
          <div
            class="multi-line-header"
          >
            <p>
              Pre to Post:
            </p>
            <p>
              Improved Skills
            </p>
          </div>
          <span
            aria-hidden="false"
            class="quill-tooltip-trigger "
            role="tooltip"
          >
            <span
              class="undefined"
              role="button"
              tabindex="0"
            >
              <img
                alt="Question mark icon"
                src="undefined/images/icons/icons-help.svg"
              />
            </span>
            <span
              class="quill-tooltip-wrapper"
            >
              <span
                aria-live="polite"
                class="quill-tooltip"
              />
            </span>
          </span>
        </th>
        <th
          class="data-table-header undefined"
          scope="col"
          style="width: 182px; min-width: 182px; text-align: right;"
        >
          <div
            class="multi-line-header"
          >
            <p>
              Pre:
            </p>
            <p>
              Questions Correct
            </p>
          </div>
          <span
            aria-hidden="false"
            class="quill-tooltip-trigger "
            role="tooltip"
          >
            <span
              class="undefined"
              role="button"
              tabindex="0"
            >
              <img
                alt="Question mark icon"
                src="undefined/images/icons/icons-help.svg"
              />
            </span>
            <span
              class="quill-tooltip-wrapper"
            >
              <span
                aria-live="polite"
                class="quill-tooltip"
              />
            </span>
          </span>
        </th>
        <th
          class="data-table-header undefined"
          scope="col"
          style="width: 182px; min-width: 182px; text-align: right;"
        >
          <div
            class="multi-line-header"
          >
            <p>
              Pre:
            </p>
            <p>
              Skills Proficient
            </p>
          </div>
          <span
            aria-hidden="false"
            class="quill-tooltip-trigger "
            role="tooltip"
          >
            <span
              class="undefined"
              role="button"
              tabindex="0"
            >
              <img
                alt="Question mark icon"
                src="undefined/images/icons/icons-help.svg"
              />
            </span>
            <span
              class="quill-tooltip-wrapper"
            >
              <span
                aria-live="polite"
                class="quill-tooltip"
              />
            </span>
          </span>
        </th>
        <th
          class="data-table-header undefined"
          scope="col"
          style="width: 182px; min-width: 182px; text-align: right;"
        >
          <div
            class="multi-line-header"
          >
            <p>
              Total Activities &
            </p>
            <p>
              Time Spent
            </p>
          </div>
          <span
            aria-hidden="false"
            class="quill-tooltip-trigger "
            role="tooltip"
          >
            <span
              class="undefined"
              role="button"
              tabindex="0"
            >
              <img
                alt="Question mark icon"
                src="undefined/images/icons/icons-help.svg"
              />
            </span>
            <span
              class="quill-tooltip-wrapper"
            >
              <span
                aria-live="polite"
                class="quill-tooltip"
              />
            </span>
          </span>
        </th>
        <th
          class="data-table-header undefined"
          scope="col"
          style="width: 182px; min-width: 182px; text-align: right;"
        >
          <div
            class="multi-line-header"
          >
            <p>
              Post:
            </p>
            <p>
              Questions Correct
            </p>
          </div>
          <span
            aria-hidden="false"
            class="quill-tooltip-trigger "
            role="tooltip"
          >
            <span
              class="undefined"
              role="button"
              tabindex="0"
            >
              <img
                alt="Question mark icon"
                src="undefined/images/icons/icons-help.svg"
              />
            </span>
            <span
              class="quill-tooltip-wrapper"
            >
              <span
                aria-live="polite"
                class="quill-tooltip"
              />
            </span>
          </span>
        </th>
        <th
          class="data-table-header undefined"
          scope="col"
          style="width: 182px; min-width: 182px; text-align: right;"
        >
          <div
            class="multi-line-header"
          >
            <p>
              Post: Skills
            </p>
            <p>
              Improved Or Maintained
            </p>
          </div>
          <span
            aria-hidden="false"
            class="quill-tooltip-trigger "
            role="tooltip"
          >
            <span
              class="undefined"
              role="button"
              tabindex="0"
            >
              <img
                alt="Question mark icon"
                src="undefined/images/icons/icons-help.svg"
              />
            </span>
            <span
              class="quill-tooltip-wrapper"
            >
              <span
                aria-live="polite"
                class="quill-tooltip"
              />
            </span>
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      class="data-table-body"
    />
  </table>
</DocumentFragment>
`;

exports[`StudentSection loaded state it should render the expected header components 1`] = `
<DocumentFragment>
  <div
    class="dropdown-container input-container inactive has-text  diagnostic-type-dropdown searchable "
    role="button"
    tabindex="0"
  >
    <label>
      Diagnostic:
    </label>
    <div
      class="dropdown css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class="dropdown__control css-13cymwt-control"
      >
        <div
          class="dropdown__value-container dropdown__value-container--has-value css-1fdsijx-ValueContainer"
        >
          <div
            class="dropdown__single-value css-1dimb5e-singleValue"
          >
            Starter Baseline Diagnostic (Pre)
          </div>
          <div
            class="dropdown__input-container css-qbdosj-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class="dropdown__input"
              id="react-select-2-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="dropdown__indicators css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class="dropdown__indicator-separator css-1u9des2-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class="dropdown__indicator dropdown__dropdown-indicator css-1xc3v61-indicatorContainer"
          >
            <svg
              aria-hidden="true"
              class="css-tj5bde-Svg"
              focusable="false"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p
    class="empty-state-message"
  >
    There is no diagnostic data available for the filters selected. Try modifying or removing a filter to see results.
  </p>
  <table
    class="data-table growth-diagnostic-reports-by-skill-table reporting-format"
  >
    <thead>
      <tr
        class="data-table-headers"
      >
        <th
          class="data-table-header undefined"
          scope="col"
          style="width: 182px; min-width: 182px; text-align: right;"
        >
          <span>
            Student Name
          </span>
        </th>
        <th
          class="data-table-header undefined"
          scope="col"
          style="width: 182px; min-width: 182px; text-align: right;"
        >
          <div
            class="multi-line-header"
          >
            <p>
              Pre to Post:
            </p>
            <p>
              Improved Skills
            </p>
          </div>
          <span
            aria-hidden="false"
            class="quill-tooltip-trigger "
            role="tooltip"
          >
            <span
              class="undefined"
              role="button"
              tabindex="0"
            >
              <img
                alt="Question mark icon"
                src="undefined/images/icons/icons-help.svg"
              />
            </span>
            <span
              class="quill-tooltip-wrapper"
            >
              <span
                aria-live="polite"
                class="quill-tooltip"
              />
            </span>
          </span>
        </th>
        <th
          class="data-table-header undefined"
          scope="col"
          style="width: 182px; min-width: 182px; text-align: right;"
        >
          <div
            class="multi-line-header"
          >
            <p>
              Pre:
            </p>
            <p>
              Questions Correct
            </p>
          </div>
          <span
            aria-hidden="false"
            class="quill-tooltip-trigger "
            role="tooltip"
          >
            <span
              class="undefined"
              role="button"
              tabindex="0"
            >
              <img
                alt="Question mark icon"
                src="undefined/images/icons/icons-help.svg"
              />
            </span>
            <span
              class="quill-tooltip-wrapper"
            >
              <span
                aria-live="polite"
                class="quill-tooltip"
              />
            </span>
          </span>
        </th>
        <th
          class="data-table-header undefined"
          scope="col"
          style="width: 182px; min-width: 182px; text-align: right;"
        >
          <div
            class="multi-line-header"
          >
            <p>
              Pre:
            </p>
            <p>
              Skills Proficient
            </p>
          </div>
          <span
            aria-hidden="false"
            class="quill-tooltip-trigger "
            role="tooltip"
          >
            <span
              class="undefined"
              role="button"
              tabindex="0"
            >
              <img
                alt="Question mark icon"
                src="undefined/images/icons/icons-help.svg"
              />
            </span>
            <span
              class="quill-tooltip-wrapper"
            >
              <span
                aria-live="polite"
                class="quill-tooltip"
              />
            </span>
          </span>
        </th>
        <th
          class="data-table-header undefined"
          scope="col"
          style="width: 182px; min-width: 182px; text-align: right;"
        >
          <div
            class="multi-line-header"
          >
            <p>
              Total Activities &
            </p>
            <p>
              Time Spent
            </p>
          </div>
          <span
            aria-hidden="false"
            class="quill-tooltip-trigger "
            role="tooltip"
          >
            <span
              class="undefined"
              role="button"
              tabindex="0"
            >
              <img
                alt="Question mark icon"
                src="undefined/images/icons/icons-help.svg"
              />
            </span>
            <span
              class="quill-tooltip-wrapper"
            >
              <span
                aria-live="polite"
                class="quill-tooltip"
              />
            </span>
          </span>
        </th>
        <th
          class="data-table-header undefined"
          scope="col"
          style="width: 182px; min-width: 182px; text-align: right;"
        >
          <div
            class="multi-line-header"
          >
            <p>
              Post:
            </p>
            <p>
              Questions Correct
            </p>
          </div>
          <span
            aria-hidden="false"
            class="quill-tooltip-trigger "
            role="tooltip"
          >
            <span
              class="undefined"
              role="button"
              tabindex="0"
            >
              <img
                alt="Question mark icon"
                src="undefined/images/icons/icons-help.svg"
              />
            </span>
            <span
              class="quill-tooltip-wrapper"
            >
              <span
                aria-live="polite"
                class="quill-tooltip"
              />
            </span>
          </span>
        </th>
        <th
          class="data-table-header undefined"
          scope="col"
          style="width: 182px; min-width: 182px; text-align: right;"
        >
          <div
            class="multi-line-header"
          >
            <p>
              Post: Skills
            </p>
            <p>
              Improved Or Maintained
            </p>
          </div>
          <span
            aria-hidden="false"
            class="quill-tooltip-trigger "
            role="tooltip"
          >
            <span
              class="undefined"
              role="button"
              tabindex="0"
            >
              <img
                alt="Question mark icon"
                src="undefined/images/icons/icons-help.svg"
              />
            </span>
            <span
              class="quill-tooltip-wrapper"
            >
              <span
                aria-live="polite"
                class="quill-tooltip"
              />
            </span>
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      class="data-table-body"
    />
  </table>
</DocumentFragment>
`;

exports[`StudentSection loading state it should render loading spinner 1`] = `
<DocumentFragment>
  <div
    class="loading-spinner"
  >
    <div
      class="spinner-container"
    >
      <img
        alt="Loading spinner"
        class="spinner"
        src="https://assets.quill.org/images/icons/loader_still.svg"
      />
    </div>
  </div>
</DocumentFragment>
`;
